[package]
name = "secure-file-sharing-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["multipart"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["io"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.7", features = ["cors", "fs", "trace"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.18.1", features = ["v4", "serde"] }

#Crypto
rsa = "0.9.9"
aes-gcm = "0.10.3"
sha2 = "0.10.9"
rand = "0.9.2"
base64 = "0.22.1"

# Utils
anyhow = "1.0.100"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
dotenvy = "0.15.7"

[profile.release]
opt-level = 3
lto = true
strip = true